--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -3202,6 +3202,66 @@
         "description": "扁平化语言 JSON 键，将它们发送到您的 OpenRouter 翻译后端，并自动重建文件。",
         "keywords": "i18n,json 翻译器,openrouter,本地化,翻译工具"
       }
+    },
+    "text-counter": {
+      "name": "文本字符统计",
+      "description": "统计文本的字符数、字数、行数等信息",
+      "placeholder": "请输入或粘贴要统计的文本...",
+      "input_title": "输入文本",
+      "input_desc": "输入要统计的文本内容",
+      "output_title": "统计结果",
+      "output_desc": "实时统计文本的各项指标",
+      "copy_stats": "复制统计结果",
+      "stats": {
+        "characters": "总字符数",
+        "characters_no_spaces": "字符数(不含空格)",
+        "words": "总词数",
+        "chinese_words": "中文字数",
+        "english_words": "英文单词数",
+        "numbers": "数字个数",
+        "sentences": "句子数",
+        "paragraphs": "段落数",
+        "lines": "行数",
+        "bytes": "字节数(UTF-8)"
+      },
+      "introduction": "文本字符统计工具是一款专业的文本分析工具，能够实时统计文本的各项指标，包括总字符数、不含空格字符数、中文字数、英文单词数、数字个数、句子数、段落数、行数和字节数等。支持中英文混合文本的精确统计，广泛应用于写作字数统计、论文字数检查、社交媒体内容限制、SEO文章分析等场景。工具完全在本地运行，保护用户文本隐私安全。",
+      "features": [
+        "📊 实时统计，输入即时显示各项指标",
+        "🇨🇳 精确识别中文字符和英文单词",
+        "🔢 智能统计数字、句子和段落",
+        "📝 支持中英文混合文本统计",
+        "📋 一键复制所有统计结果",
+        "🎯 UTF-8字节数精确计算",
+        "🔒 本地处理，保护文本隐私",
+        "📱 响应式设计，支持移动端"
+      ],
+      "faq": [
+        {
+          "question": "字符数和字数有什么区别？",
+          "answer": "字符数统计的是文本中的所有字符，包括空格、标点符号等。而字数是指有意义的词语单位：中文按单字计算，英文按空格分隔的单词计算，连续数字算作一个数字。例如'Hello 你好 123'的字符数是12，字数是3（1个英文单词+2个中文字+1个数字）。"
+        },
+        {
+          "question": "如何统计论文或文章的字数？",
+          "answer": "将文本粘贴到输入框，工具会自动统计各项指标。对于学术论文，通常关注'总词数'（中文字+英文单词）或'字符数(不含空格)'。不同期刊和学校对字数统计标准可能不同，建议根据具体要求选择合适的指标。"
+        },
+        {
+          "question": "句子数是如何计算的？",
+          "answer": "句子数以中英文的句号（.或。）、问号（?或？）、感叹号（!或！）作为分隔符来计算。连续的标点符号只计算一次，空白内容不计入句子数。"
+        },
+        {
+          "question": "UTF-8字节数有什么用？",
+          "answer": "UTF-8字节数反映了文本在存储或传输时的实际大小。中文字符在UTF-8编码中通常占3个字节，英文字符占1个字节。这对于数据库字段长度限制、API请求大小限制、文件大小估算等场景非常有用。"
+        },
+        {
+          "question": "工具支持哪些语言的统计？",
+          "answer": "工具主要针对中英文混合文本进行优化，能够精确区分中文字符和英文单词。对于其他语言（如日文、韩文等），会按字符数统计。数字统计支持所有阿拉伯数字。"
+        }
+      ],
+      "meta": {
+        "title": "文本字符统计工具 - 在线字数统计",
+        "description": "免费在线文本字符统计工具,实时统计字符数、字数、行数、段落数,支持中英文混合文本,适用于写作和内容创作。",
+        "keywords": "字符统计, 字数统计, 文本统计"
+      }
     }
   },
   "seo": {
